# graphpipe-tf-py

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  build_darwin.sh  build_linux.sh  manually.sh  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
examples/: .gitignore  Remote Model With GraphPipe.ipynb  RemoteModelWithGraphPipe.ipynb  call_remote_op.py  convert.py  model_server.py  simple_request.py  tf_graph.py
examples/az4/: README.md  az4.000001.pb  az4.000003.pb  az4.000005.pb  az4.000007.pb  az4.000010.pb  az4.000020.pb  az4.000050.pb  az4.py
graphpipe_tf/: layers.py  ops.py
remote_op/: Makefile  remote_op.cc
remote_op/graphpipe/cpp/: graphpipe_generated.h
tools/h5topb/: Dockerfile  Makefile  h5topb.sh
utils/h5topb/: Dockerfile  h5topb.sh
