[metadata]
version=0.0.1
name = graphpipe_tf
summary = Graphpipe helper for TensorFlow remote ops
description-file =
    README.md
author = OCI ML Team
author-email = internal@oracle.com
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6

[files]
packages =
    graphpipe_tf
package_data =
    graphpipe_tf = remote_op.so
